# pipelinegenerator

./: .gitignore  EjercicioNivel3A_v000 copy.ipynb  EjercicioNivel3A_v000.ipynb  README.md  mypy.ini  pruebaImportacion.ipynb  pyproject.toml
.github/workflows/: cicd-action.yml
pipelinegenerator/: __init__.py  generator.py
tests/: test_generator.py
