[tool.poetry]
name = "pipelinegenerator"
version = "0.1.7"
description = ""
authors = ["alby <alby.mendoza@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.1"
scikit-learn = "^1.1.3"


[tool.poetry.group.dev.dependencies]
black = "^22.10.0"
pytest = "^7.2.0"
ipykernel = "^6.17.0"
pylint = "^2.15.6"
pre-commit = "^2.20.0"
mypy = "^0.991"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--doctest-modules"